updates namespace of sources examples

--- a/examples/sources/cfg/worker.cfg
+++ b/examples/sources/cfg/worker.cfg
@@ -5,7 +5,7 @@ password=None
 db=0
 
 [tdf]
-namespace=program
+namespace=sources
 
 [worker]
 task_output_filename=$program/results/$worker-$taskId-$round.out
